Fixed aprove submit reimbursement

--- a/reimbursement_html_vs2/html/login/login.html
+++ b/reimbursement_html_vs2/html/login/login.html
@@ -20,7 +20,7 @@
     <div class="container">
         <form class="form-signin" onsubmit="login(event)">
           <div class="text-center mb-4">
-            <img src="../Images/GinyuForce.png" alt="GinyuForce" width="239" height="75">
+            <img src="../Images/GinyuForce.jpg" alt="GinyuForce" width="239" height="75">
           </div>
     
           <div class="form-label-group">
