--- a/reimbursement_html_vs2/html/usersHTML/viweUsers.html
+++ b/reimbursement_html_vs2/html/usersHTML/viweUsers.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Creat New User</title>
+    <title>Viwe Users</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <!-- bootstrap css -->
