--- a/reimbursement_html_vs2/html/login/login.html
+++ b/reimbursement_html_vs2/html/login/login.html
@@ -19,10 +19,10 @@
 <body class="text-center">
     <div class="container">
         <form class="form-signin" onsubmit="login(event)">
-          <div class="text-center mb-4">
-            <img src="../Images/GinyuForce.jpg" alt="GinyuForce" width="239" height="75">
+          <div class="img">
+            <img src="../Images/GinyuForce.jpg" alt="GinyuForce">
           </div>
-    
+          <br/>
           <div class="form-label-group">
             <input type="text" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
             <label for="inputUsername">Username</label>
